--- a/helloWorld/package.json
+++ b/helloWorld/package.json
@@ -5,8 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production --base-href https://ThomasBordis.github.io/TP_NOTE/",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "test-headless":"ng test --watch=false --browsers=ChromeHeadless"
   },
   "private": true,
   "dependencies": {
